--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+      env:
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
