--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.servlet.context-path=/api
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 logging.level.root=WARN
 logging.level.com.example.financemanager=DEBUG
 logging.file.name=app.log
