--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,6 @@ jobs:
       run: mvn clean install
       env:
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
