--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,13 +27,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn clean install
+    - name: Build and analyze with Maven and SonarCloud
+      run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
       env:
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
