--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=${PROJECT_KEY}
 sonar.organization=${ORGANIZATION_KEY}
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
