--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.organization=${ORGANIZATION_KEY}
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.exclusions=**/*FinanceManagerApplicationTest.java
