--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,4 +28,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build and analyze with Maven and SonarCloud
-      run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ secrets.PROJECT_KEY }} -Dsonar.organization=${{ secrets.ORGANIZATION_KEY }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.exclusions=**/*FinanceManagerApplicationTest.java 
+      run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar 
+       -Dsonar.projectKey=${{ secrets.PROJECT_KEY }} 
+       -Dsonar.organization=${{ secrets.ORGANIZATION_KEY }} 
+       -Dsonar.host.url=https://sonarcloud.io 
+       -Dsonar.login=${{ secrets.SONAR_TOKEN }} 
+       -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.exclusions=**/*FinanceManagerApplicationTest.java 
+       -Dsonar.test.exclusions=**/com/example/financemanager/FinanceManagerApplicationTest.java
