Adding exclusion to the sonar properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.context-path=/api
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=C##User1
+spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 logging.level.root=WARN
 logging.level.com.example.financemanager=DEBUG
 logging.file.name=app.log
-jwt.secret=${JWT_SECRET}
+jwt.secret=Tw;]UF)~(8=#P.cVnud@HL
