Changing filter logic
Adding to JWT auth filter to allow requests to login and register endpoints without token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.root=WARN
 logging.level.com.example.financemanager=DEBUG
 logging.file.name=app.log
 jwt.secret=Tw;]UF)~(8=#P.cVnud@HL
+logging.level.org.springframework.security=DEBUG
+/management.trace.http.include=request,response,headers
